--- a/src/pages/instruments/06_dsee_en.html
+++ b/src/pages/instruments/06_dsee_en.html
@@ -777,7 +777,7 @@
                             <input type="text" id="tsa1_g" name="tsa1_g" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 read-only:bg-gray-100 w-24 p-2.5" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tsa1_t" name="tsa1_t" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 read-only:bg-gray-100 w-24 p-2.5" />
+                            <input type="text" id="tsa1_t" name="tsa1_t" readonly class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 read-only:bg-gray-100 w-24 p-2.5" />
                         </td>
                     </tr>
                     <tr class="border-b">
@@ -789,7 +789,7 @@
                             <input type="text" id="tsa2_g" name="tsa2_g" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 read-only:bg-gray-100 w-24 p-2.5" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tsa2_t" name="tsa2_t" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 read-only:bg-gray-100 w-24 p-2.5" />
+                            <input type="text" id="tsa2_t" name="tsa2_t" readonly class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 read-only:bg-gray-100 w-24 p-2.5" />
                         </td>
                     </tr>
                     <tr class="border-b">
@@ -801,7 +801,7 @@
                             <input type="text" id="tsa3_g" name="tsa3_g" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 read-only:bg-gray-100 w-24 p-2.5" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tsa3_t" name="tsa3_t" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 read-only:bg-gray-100 w-24 p-2.5" />
+                            <input type="text" id="tsa3_t" name="tsa3_t" readonly class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 read-only:bg-gray-100 w-24 p-2.5" />
                         </td>
                     </tr>
                     <tr class="border-b">
@@ -809,10 +809,10 @@
                             <p class="block">TNR1. The total number of children in this institution on December 31st, the reference year (2023)</p>
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tnr1_b" name="tnr1_b" readonly class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 read-only:bg-gray-100 w-24 p-2.5" />
+                            <input type="text" id="tnr1_b" name="tnr1_b" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 read-only:bg-gray-100 w-24 p-2.5" />
                         </td>
                         <td class="p-2 text-center">
-                            <input type="text" id="tnr1_g" name="tnr1_g" readonly class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 read-only:bg-gray-100 w-24 p-2.5" />
+                            <input type="text" id="tnr1_g" name="tnr1_g" class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 read-only:bg-gray-100 w-24 p-2.5" />
                         </td>
                         <td class="p-2 text-center">
                             <input type="text" id="tnr1_t" name="tnr1_t" readonly class="bg-white border border-gray-300 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 inline-block disabled:bg-gray-100 read-only:bg-gray-100 w-24 p-2.5" />
