--- a/src/pages/instruments/05_yplcs_ru.html
+++ b/src/pages/instruments/05_yplcs_ru.html
@@ -75,9 +75,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>
-                    OMR4. Должность/функции <small class="block italic text-red-500">Введите имя специалиста, который сопровождает ребенка</small>
-                </div>
+                <div>OMR4. Должность/функции</div>
                 <div>
                     <input type="text" id="omr4" name="omr4" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
@@ -323,7 +321,7 @@
             </div>
 
             <p>b. Юридическое место жительства - Город/Деревня:</p>
-            <div class="grid grid-cols-2 gap-4 items-center">
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div class="ml-4">c. Область:</div>
                 <div>
                     <select id="pi9c" name="pi9c" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -332,7 +330,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center">
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div class="ml-4">d. Район:</div>
                 <div>
                     <select id="pi9d" name="pi9d" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -340,7 +338,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4 items-center">
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div class="ml-4">h. Населённый пункт</div>
                 <div>
                     <select id="pi9h" name="pi9h" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
