--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -218,6 +218,15 @@
 
                 </div>
             </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>LK14m. Mahalla</div>
+                <div>
+                    <select id="lk14m" name="lk14m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
+
+                </div>
+            </div>
 
             <input type="hidden" id="lk14e" name="lk14e" />
 
@@ -441,6 +450,15 @@
                 <div>CM3d. Settlement</div>
                 <div>
                     <select id="cm3d" name="cm3d" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
+
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>CM3m. Mahalla</div>
+                <div>
+                    <select id="cm3m" name="cm3m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
 
@@ -986,6 +1004,15 @@
 
                 </div>
             </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>CM10m. Mahalla</div>
+                <div>
+                    <select id="cm10m" name="cm10m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
+
+                </div>
+            </div>
 
             <input type="hidden" id="cm10f" name="cm10f" />
 
@@ -1038,6 +1065,15 @@
                 <div>e. Settlement</div>
                 <div>
                     <select id="cm11e" name="cm11e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>CM11m. Mahalla</div>
+                <div>
+                    <select id="cm11m" name="cm11m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
 
@@ -1238,6 +1274,16 @@
                 <div>CT3d. Settlement</div>
                 <div>
                     <select id="ct3d" name="ct3d" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
+
+                </div>
+            </div>
+
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>CT3m. Mahalla</div>
+                <div>
+                    <select id="ct3m" name="ct3m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
 
@@ -1780,6 +1826,16 @@
                 </div>
             </div>
 
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>CT10m. Mahalla</div>
+                <div>
+                    <select id="ct10m" name="ct10m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
+
+                </div>
+            </div>
+
             <input type="hidden" id="ct10f" name="ct10f" />
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
@@ -1833,7 +1889,15 @@
                     <select id="ct11e" name="ct11e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
+                </div>
+            </div>
 
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>CT11m. Mahalla</div>
+                <div>
+                    <select id="ct11m" name="ct11m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
                 </div>
             </div>
 
@@ -2529,7 +2593,15 @@
                     <select id="cg10e" name="cg10e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
+                </div>
+            </div>
 
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>CG10m. Mahalla</div>
+                <div>
+                    <select id="cg10m" name="cg10m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
                 </div>
             </div>
 
@@ -2581,7 +2653,15 @@
                     <select id="cg11e" name="cg11e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
+                </div>
+            </div>
 
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>CG11m. Mahalla</div>
+                <div>
+                    <select id="cg11m" name="cg11m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
                 </div>
             </div>
 
@@ -2677,6 +2757,15 @@
                 <div>SA3c. Settlement</div>
                 <div>
                     <select id="sa3c" name="sa3c" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>SA3m. Mahalla</div>
+                <div>
+                    <select id="sa3m" name="sa3m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
                 </div>
