--- a/src/pages/instruments/02_cibs_uz.html
+++ b/src/pages/instruments/02_cibs_uz.html
@@ -231,6 +231,15 @@
                 </div>
             </div>
 
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>LK14m. Mahalla</div>
+                <div>
+                    <select id="lk14m" name="lk14m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- tanlang ---</option>
+                    </select>
+                </div>
+            </div>
+
             <input type="hidden" id="lk14e" name="lk14e" />
 
 
@@ -411,6 +420,15 @@
                 <div>SA3c. Aholi punkti</div>
                 <div>
                     <select id="sa3c" name="sa3c" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- tanlang ---</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>SA3m. Mahalla</div>
+                <div>
+                    <select id="sa3m" name="sa3m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
                     </select>
                 </div>
@@ -751,7 +769,15 @@
                     <select id="cm3d" name="cm3d" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
                     </select>
+                </div>
+            </div>
 
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>CM3m. Mahalla</div>
+                <div>
+                    <select id="cm3m" name="cm3m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- tanlang ---</option>
+                    </select>
                 </div>
             </div>
 
@@ -1099,7 +1125,15 @@
                     <select id="cm11e" name="cm11e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
                     </select>
+                </div>
+            </div>
 
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>Mahalla. CM11m</div>
+                <div>
+                    <select id="cm11m" name="cm11m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- tanlang ---</option>
+                    </select>
                 </div>
             </div>
 
@@ -2090,7 +2124,15 @@
                     <select id="cg11e" name="cg11e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
                     </select>
+                </div>
+            </div>
 
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>Mahalla. CT3m</div>
+                <div>
+                    <select id="cg11m" name="cg11m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- tanlang ---</option>
+                    </select>
                 </div>
             </div>
 
