--- a/src/pages/instruments/02_cibs_en.html
+++ b/src/pages/instruments/02_cibs_en.html
@@ -1129,7 +1129,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>Mahalla. CM11m</div>
+                <div>CM11m. Mahalla</div>
                 <div>
                     <select id="cm11m" name="cm11m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
@@ -1293,6 +1293,15 @@
                 <div>CT3d. Settlement</div>
                 <div>
                     <select id="ct3d" name="ct3d" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>CT3m. Mahalla</div>
+                <div>
+                    <select id="ct3m" name="ct3m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
                 </div>
@@ -1644,7 +1653,15 @@
                     <select id="ct11e" name="ct11e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
+                </div>
+            </div>
 
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>CT11m. Mahalla</div>
+                <div>
+                    <select id="ct11m" name="ct11m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
                 </div>
             </div>
 
@@ -2128,7 +2145,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>Mahalla. CT3m</div>
+                <div>CG11m. Mahalla</div>
                 <div>
                     <select id="cg11m" name="cg11m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
