--- a/src/pages/instruments/04_qmr_ru.html
+++ b/src/pages/instruments/04_qmr_ru.html
@@ -116,6 +116,15 @@
                     </select>
                 </div>
             </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>I4m. Махалли</div>
+                <div>
+                    <select id="i4m" name="i4m"
+                        class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="--" selected>--</option>
+                    </select>
+                </div>
+            </div>
 
             <input type="hidden" id="i4d" name="i4d" />
 
