--- a/src/pages/instruments/05_yplcs_en.html
+++ b/src/pages/instruments/05_yplcs_en.html
@@ -201,7 +201,14 @@
                     <select id="pi4d" name="pi4d" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
-
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>PI4m. Mahalla</div>
+                <div>
+                    <select id="pi4m" name="pi4m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
                 </div>
             </div>
 
@@ -345,6 +352,14 @@
                         <option value="-9">--- choose ---</option>
                     </select>
 
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div class="ml-4">m. Mahalla</div>
+                <div>
+                    <select id="pi9m" name="pi9m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
                 </div>
             </div>
 
