--- a/src/pages/instruments/05a_tqyp_uz.html
+++ b/src/pages/instruments/05a_tqyp_uz.html
@@ -129,24 +129,21 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>
-                    OMR5. Kasbi</div>
+                <div>OMR5. Kasbi</div>
                 <div>
                     <input type="text" id="omr5" name="omr5" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>
-                    OMR6. Telefon</div>
+                <div>OMR6. Telefon</div>
                 <div>
                     <input type="text" id="omr6" name="omr6" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>
-                    OMR7. Elektron pochta</div>
+                <div>OMR7. Elektron pochta</div>
                 <div>
                     <input type="text" id="omr7" name="omr7" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
@@ -241,7 +238,14 @@
                     <select id="ptr5d" name="ptr5d" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
                     </select>
-
+                </div>
+            </div>
+            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+                <div>PTR5m. Mahalla</div>
+                <div>
+                    <select id="ptr5m" name="ptr5m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- tanlang ---</option>
+                    </select>
                 </div>
             </div>
 
@@ -376,6 +380,14 @@
                         <option value="-9">--- tanlang ---</option>
                     </select>
 
+                </div>
+            </div>
+            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+                <div>PTR8m. Mahalla</div>
+                <div>
+                    <select id="ptr8m" name="ptr8m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- tanlang ---</option>
+                    </select>
                 </div>
             </div>
 
