--- a/src/pages/instruments/07_ftch_ru.html
+++ b/src/pages/instruments/07_ftch_ru.html
@@ -99,14 +99,6 @@
                 <div></div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>IFP1а. Область:</div>
-                <div>
-                    <select id="ifp1a" name="ifp1a" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--- выбрать ---</option>
-                    </select>
-                </div>
-            </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>IFP1b. Район</div>
                 <div>
                     <select id="ifp1b" name="ifp1b" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -118,6 +110,14 @@
                 <div>IFP1c. Населённый пункт</div>
                 <div>
                     <select id="ifp1c" name="ifp1c" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- выбрать ---</option>
+                    </select>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>IFP1m. Махалли</div>
+                <div>
+                    <select id="ifp1m" name="ifp1m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- выбрать ---</option>
                     </select>
                 </div>
