--- a/src/pages/instruments/08_pfq_en.html
+++ b/src/pages/instruments/08_pfq_en.html
@@ -99,14 +99,6 @@
                 <div></div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PF1a. Region:</div>
-                <div>
-                    <select id="pf1a" name="pf1a" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--- choose ---</option>
-                    </select>
-                </div>
-            </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>PF1b. District</div>
                 <div>
                     <select id="pf1b" name="pf1b" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -118,6 +110,14 @@
                 <div>PF1c. Settlement</div>
                 <div>
                     <select id="pf1c" name="pf1c" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                    </select>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>PF1m<. Mahalla</div>
+                <div>
+                    <select id="pf1m" name="pf1m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
                     </select>
                 </div>
