--- a/src/pages/instruments/08_pfq_ru.html
+++ b/src/pages/instruments/08_pfq_ru.html
@@ -395,11 +395,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c1d-1" type="radio" value="1" name="fc4_c1d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c1d-1" class="ms-2 text-sm text-gray-900">1. Мужской</label>
+                        <label for="fc4_c1d-1" class="ms-2 text-sm text-gray-900">1. Да</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c1d-2" type="radio" value="2" name="fc4_c1d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c1d-2" class="ms-2 text-sm text-gray-900">2. Женский</label>
+                        <label for="fc4_c1d-2" class="ms-2 text-sm text-gray-900">0. Нет</label>
                     </div>
                 </div>
             </div>
