update str4 la I5a

--- a/src/pages/instruments/05a_tqyp_ru.html
+++ b/src/pages/instruments/05a_tqyp_ru.html
@@ -80,7 +80,7 @@
                 <div>STR4. Тип учреждения</div>
                 <div>
                     <select id="str4" name="str4" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--</option>
+                        <option value="-9">--- выбрать ---</option>
                         <optgroup label="Детские учреждения:">
                             <option value="12">12. детские «дома милосердия» - Мехрибонлик</option>
                             <option value="13">13. Дома-Интернаты Для Детей С Инвалидностью «Мурувват»</option>
