--- a/src/pages/instruments/05a_tqyp_en.html
+++ b/src/pages/instruments/05a_tqyp_en.html
@@ -80,7 +80,7 @@
                 <div>STR4. Type of institution</div>
                 <div>
                     <select id="str4" name="str4" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="-9">--</option>
+                        <option value="-9">--- choose ---</option>
                         <optgroup label="Childcare institutions:">
                             <option value="12">12. Mehribonlik house</option>
                             <option value="13">13. Muruvvat house for children with disabilities</option>
