--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -5351,7 +5351,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div>LK22_12. Bola OIV/OITS bilan kasalmi?</div>
+                <div>LK22_12. Bolada OIV / OITS mavjudmi?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input type="radio" id="lk22_12-1" name="lk22_12" value="1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6022,7 +6022,7 @@
                     <option value="9">9</option>
                     <option value="10">10. Jami</option>
                     <option value="-1">-1. Bilmayman / Javob yo'q</option>
-                    <option value="10">-7. Shart emas</option>
+                    <option value="10">77. Shart emas</option>
                 </select>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -6040,7 +6040,7 @@
                     <option value="9">9</option>
                     <option value="10">10. Jami</option>
                     <option value="-1">-1. Bilmayman / Javob yo'q</option>
-                    <option value="-77">-7. Shart emas</option>
+                    <option value="77">77. Shart emas</option>
                 </select>
             </div>
 
@@ -6398,8 +6398,8 @@
                 <div>SK1. O'tgan olti oy ichida bolaning ishini yurituvchi mutaxassis yoki boshqa Mahalla/tuman darajasidagi mutaxassis uyga tashrif buyurib, bolaning ota-onasi, buva-buvisi, xola-ammasi yoki boshqa oila a'zolari bilan yuzma-yuz suhbatda bo'ldimi?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input type="radio" id="sk1-1" name="sk1" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk1-1" class="ms-2 text-sm text-gray-900">- 7. Bolaning oilasi yo'q</label>
+                        <input type="radio" id="sk1-1" name="sk1" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk1-1" class="ms-2 text-sm text-gray-900">77. Bolaning oilasi yo'q</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk1-2" name="sk1" value="0" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6416,8 +6416,8 @@
                 <div>SK2. O'tgan olti oy ichida Bolani ko'rish uchun uning ota-onasi yoki boshqa katta yoshli oila a'zosi kelib-ketganmi?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input type="radio" id="sk2-1" name="sk2" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk2-1" class="ms-2 text-sm text-gray-900">- 7. Bolaning oilasi yo'q</label>
+                        <input type="radio" id="sk2-1" name="sk2" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk2-1" class="ms-2 text-sm text-gray-900">77. Bolaning oilasi yo'q</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk2-2" name="sk2" value="2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6469,7 +6469,7 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input type="radio" id="sk4-1" name="sk4" value="0" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk4-1" class="ms-2 text-sm text-gray-900">1. Ha,</label>
+                        <label for="sk4-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk4-2" name="sk4" value="1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6482,8 +6482,8 @@
                 <div>SK5. Bolaning boshqa xizmatlarda yashovchi aka-uka/opa-singillari bilan munosabatlari qanday qo'llab-quvvatlanib kelayotganligi yoki yaxshilayotganligi yuzasidan ma'lumot mavjudmi?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input type="radio" id="sk5-1" name="sk5" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk5-1" class="ms-2 text-sm text-gray-900">-7. Bolaning boshqa xizmatlarda aka-uka/opa-singillari yo'q</label>
+                        <input type="radio" id="sk5-1" name="sk5" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk5-1" class="ms-2 text-sm text-gray-900">77. Bolaning boshqa xizmatlarda aka-uka/opa-singillari yo'q</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk5-2" name="sk5" value="0" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6500,8 +6500,8 @@
                 <div>SK6. O'tgan olti oy ichida bola aka-uka/opa-singillari bilan uchrashdimi?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input type="radio" id="sk6-1" name="sk6" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk6-1" class="ms-2 text-sm text-gray-900">- 7. Bola aka-uka/opa-singillari bilan birga yoki ularga juda yaqin yashaydi</label>
+                        <input type="radio" id="sk6-1" name="sk6" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk6-1" class="ms-2 text-sm text-gray-900">77. Bola aka-uka/opa-singillari bilan birga yoki ularga juda yaqin yashaydi</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk6-2" name="sk6" value="0" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6534,8 +6534,8 @@
                         <label for="sk7-4" class="ms-2 text-sm text-gray-900">9. Ma'lumot mavjud emas</label>
                     </div>
                     <div class="flex items-center">
-                        <input type="radio" id="sk7-5" name="sk7" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk7-5" class="ms-2 text-sm text-gray-900">- 7. Bolaning oilasi yo'q</label>
+                        <input type="radio" id="sk7-5" name="sk7" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk7-5" class="ms-2 text-sm text-gray-900">77. Bolaning oilasi yo'q</label>
                     </div>
                 </div>
             </div>
