--- a/src/pages/instruments/02_cibs_en.html
+++ b/src/pages/instruments/02_cibs_en.html
@@ -5073,7 +5073,7 @@
                     <option value="9">9</option>
                     <option value="10">10. Total</option>
                     <option value="-1">-1. I don't know / No answer</option>
-                    <option value="-77">-7. Not necessary</option>
+                    <option value="77">77. Not necessary</option>
                 </select>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -5091,7 +5091,7 @@
                     <option value="9">9</option>
                     <option value="10">10. Total</option>
                     <option value="-1">-1. I don't know / No answer</option>
-                    <option value="-77">-7. Not necessary</option>
+                    <option value="77">77. Not necessary</option>
                 </select>
             </div>
 
@@ -5355,8 +5355,8 @@
                 <div>SK2. In the past six months, has the child visited or has been visited by the parents or another adult family member?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="sk2-1" type="radio" value="-77" name="sk2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk2-1" class="ms-2 text-sm text-gray-900">- 7. The child has no family</label>
+                        <input id="sk2-1" type="radio" value="77" name="sk2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk2-1" class="ms-2 text-sm text-gray-900">77. The child has no family</label>
                     </div>
                     <div class="flex items-center">
                         <input id="sk2-2" type="radio" value="2" name="sk2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -5421,8 +5421,8 @@
                 <div>SK5. Is there any information available regarding how the child's relationship with their siblings who are living in different services, is maintained or facilitated?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="sk5-1" type="radio" value="-77" name="sk5" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk5-1" class="ms-2 text-sm text-gray-900">-7. The child has no siblings in other services</label>
+                        <input id="sk5-1" type="radio" value="77" name="sk5" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk5-1" class="ms-2 text-sm text-gray-900">77. The child has no siblings in other services</label>
                     </div>
                     <div class="flex items-center">
                         <input id="sk5-2" type="radio" value="0" name="sk5" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -5439,8 +5439,8 @@
                 <div>SK6. In the past six months, did the child meet with siblings?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="sk6-1" type="radio" value="-77" name="sk6" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk6-1" class="ms-2 text-sm text-gray-900">- 7. The child lives together with their siblings or very close to them</label>
+                        <input id="sk6-1" type="radio" value="77" name="sk6" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk6-1" class="ms-2 text-sm text-gray-900">77. The child lives together with their siblings or very close to them</label>
                     </div>
                     <div class="flex items-center">
                         <input id="sk6-2" type="radio" value="0" name="sk6" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
