--- a/src/pages/instruments/02_cibs_ru.html
+++ b/src/pages/instruments/02_cibs_ru.html
@@ -5073,7 +5073,7 @@
                     <option value="9">9</option>
                     <option value="10">10. Всего</option>
                     <option value="-1">-1. Я не знаю / Нет ответа</option>
-                    <option value="-77">-7. Не обязательно</option>
+                    <option value="77">77. Не обязательно</option>
                 </select>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -5091,7 +5091,7 @@
                     <option value="9">9</option>
                     <option value="10">10. Всего</option>
                     <option value="-1">-1. Я не знаю / Нет ответа</option>
-                    <option value="-77">-7. Не обязательно</option>
+                    <option value="77">77. Не обязательно</option>
                 </select>
             </div>
 
@@ -5355,8 +5355,8 @@
                 <div>SK2. За последние шесть месяцев посещал ли ребенок семью или посещали ли его родители или другой взрослый член семьи?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="sk2-1" type="radio" value="-77" name="sk2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk2-1" class="ms-2 text-sm text-gray-900">- 7. У ребенка нет семьи</label>
+                        <input id="sk2-1" type="radio" value="77" name="sk2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk2-1" class="ms-2 text-sm text-gray-900">77. У ребенка нет семьи</label>
                     </div>
                     <div class="flex items-center">
                         <input id="sk2-2" type="radio" value="2" name="sk2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -5421,8 +5421,8 @@
                 <div>SK5. Имеется ли какая-либо информация о том, как поддерживаются или способствуют улучшению отношения ребенка с его братьями и сестрами, которые проживают в различных службах?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="sk5-1" type="radio" value="-77" name="sk5" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk5-1" class="ms-2 text-sm text-gray-900">-7. У ребенка нет братьев и сестер в других службах</label>
+                        <input id="sk5-1" type="radio" value="77" name="sk5" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk5-1" class="ms-2 text-sm text-gray-900">77. У ребенка нет братьев и сестер в других службах</label>
                     </div>
                     <div class="flex items-center">
                         <input id="sk5-2" type="radio" value="0" name="sk5" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -5439,8 +5439,8 @@
                 <div>SK6. Встречался ли ребенок с братьями и сестрами  за последние шесть месяцев?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="sk6-1" type="radio" value="-77" name="sk6" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk6-1" class="ms-2 text-sm text-gray-900">- 7. Ребенок живет вместе со своими братьями и сестрами или очень близко к ним</label>
+                        <input id="sk6-1" type="radio" value="77" name="sk6" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk6-1" class="ms-2 text-sm text-gray-900">77. Ребенок живет вместе со своими братьями и сестрами или очень близко к ним</label>
                     </div>
                     <div class="flex items-center">
                         <input id="sk6-2" type="radio" value="0" name="sk6" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
