--- a/src/pages/instruments/04_qmr_uz.html
+++ b/src/pages/instruments/04_qmr_uz.html
@@ -121,7 +121,7 @@
                 <div>
                     <select id="i4m" name="i4m"
                         class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
-                        <option value="--" selected>--</option>
+                        <option value="-9">--- tanlang ---</option>
                     </select>
                 </div>
             </div>
