--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -6022,7 +6022,7 @@
                     <option value="9">9</option>
                     <option value="10">10. Total</option>
                     <option value="-1">-1. I don't know / No answer</option>
-                    <option value="10">-7. Not necessary</option>
+                    <option value="10">77. Not necessary</option>
                 </select>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -6040,7 +6040,7 @@
                     <option value="9">9</option>
                     <option value="10">10. Total</option>
                     <option value="-1">-1. I don't know / No answer</option>
-                    <option value="-77">-7. Not necessary</option>
+                    <option value="77">77. Not necessary</option>
                 </select>
             </div>
 
@@ -6398,8 +6398,8 @@
                 <div>SK1. In the past six months, has the specialist who monitors the case or other Makhala/district level specialist paid a home visit and talked face-to-face with this child's parents, grandparents, aunts or extended family?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input type="radio" id="sk1-1" name="sk1" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk1-1" class="ms-2 text-sm text-gray-900">- 7. The child has no family</label>
+                        <input type="radio" id="sk1-1" name="sk1" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk1-1" class="ms-2 text-sm text-gray-900">77. The child has no family</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk1-2" name="sk1" value="0" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6416,8 +6416,8 @@
                 <div>SK2. In the past six months, has the child visited or has been visited by the parents or another adult family member?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input type="radio" id="sk2-1" name="sk2" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk2-1" class="ms-2 text-sm text-gray-900">- 7. The child has no family</label>
+                        <input type="radio" id="sk2-1" name="sk2" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk2-1" class="ms-2 text-sm text-gray-900">77. The child has no family</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk2-2" name="sk2" value="2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6469,7 +6469,7 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input type="radio" id="sk4-1" name="sk4" value="0" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk4-1" class="ms-2 text-sm text-gray-900">1. Yes,</label>
+                        <label for="sk4-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk4-2" name="sk4" value="1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6482,8 +6482,8 @@
                 <div>SK5. Is there any information available regarding how the child's relationship with their siblings who are living in different services, is maintained or facilitated?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input type="radio" id="sk5-1" name="sk5" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk5-1" class="ms-2 text-sm text-gray-900">-7. The child has no siblings in other services</label>
+                        <input type="radio" id="sk5-1" name="sk5" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk5-1" class="ms-2 text-sm text-gray-900">77. The child has no siblings in other services</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk5-2" name="sk5" value="0" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6500,8 +6500,8 @@
                 <div>SK6. In the past six months, did the child meet with siblings?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input type="radio" id="sk6-1" name="sk6" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk6-1" class="ms-2 text-sm text-gray-900">- 7. The child lives together with their siblings or very close to them</label>
+                        <input type="radio" id="sk6-1" name="sk6" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk6-1" class="ms-2 text-sm text-gray-900">77. The child lives together with their siblings or very close to them</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk6-2" name="sk6" value="0" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6534,8 +6534,8 @@
                         <label for="sk7-4" class="ms-2 text-sm text-gray-900">9. No information</label>
                     </div>
                     <div class="flex items-center">
-                        <input type="radio" id="sk7-5" name="sk7" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk7-5" class="ms-2 text-sm text-gray-900">- 7. The child has no family</label>
+                        <input type="radio" id="sk7-5" name="sk7" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk7-5" class="ms-2 text-sm text-gray-900">77. The child has no family</label>
                     </div>
                 </div>
             </div>
