--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -6022,7 +6022,7 @@
                     <option value="9">9</option>
                     <option value="10">10. Всего</option>
                     <option value="-1">-1. Я не знаю / Нет ответа</option>
-                    <option value="10">-7. Не обязательно</option>
+                    <option value="10">77. Не обязательно</option>
                 </select>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -6040,7 +6040,7 @@
                     <option value="9">9</option>
                     <option value="10">10. Всего</option>
                     <option value="-1">-1. Я не знаю / Нет ответа</option>
-                    <option value="-77">-7. Не обязательно</option>
+                    <option value="77">77. Не обязательно</option>
                 </select>
             </div>
 
@@ -6398,8 +6398,8 @@
                 <div>SK1. Посещали ли дом и разговаривал ли с глазу на глаз с родителями, бабушками и дедушками, тетями или расширенной семьей этого ребенка ,специалист, сопровождающий дело ребенка или другой специалист махаллинского/районного уровня за последние шесть месяцев?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input type="radio" id="sk1-1" name="sk1" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk1-1" class="ms-2 text-sm text-gray-900">- 7. У ребенка нет семьи</label>
+                        <input type="radio" id="sk1-1" name="sk1" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk1-1" class="ms-2 text-sm text-gray-900">77. У ребенка нет семьи</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk1-2" name="sk1" value="0" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6416,8 +6416,8 @@
                 <div>SK2. Посещали  ли родители или другой взрослый член семьи ребенка  за последние шесть месяцев?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input type="radio" id="sk2-1" name="sk2" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk2-1" class="ms-2 text-sm text-gray-900">- 7. У ребенка нет семьи</label>
+                        <input type="radio" id="sk2-1" name="sk2" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk2-1" class="ms-2 text-sm text-gray-900">77. У ребенка нет семьи</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk2-2" name="sk2" value="2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6469,7 +6469,7 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input type="radio" id="sk4-1" name="sk4" value="0" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk4-1" class="ms-2 text-sm text-gray-900">1. Да,</label>
+                        <label for="sk4-1" class="ms-2 text-sm text-gray-900">1. Да</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk4-2" name="sk4" value="1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6482,8 +6482,8 @@
                 <div>SK5. Имеется ли какая-либо информация о том, как поддерживаются или улучшаются отношения ребенка с его братьями и сестрами, которые проживают в различных службах?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input type="radio" id="sk5-1" name="sk5" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk5-1" class="ms-2 text-sm text-gray-900">-7. У ребенка нет братьев и сестер в других службах</label>
+                        <input type="radio" id="sk5-1" name="sk5" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk5-1" class="ms-2 text-sm text-gray-900">77. У ребенка нет братьев и сестер в других службах</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk5-2" name="sk5" value="0" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6500,8 +6500,8 @@
                 <div>SK6. Встречался ли ребенок с братьями и сестрами  за последние шесть месяцев?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input type="radio" id="sk6-1" name="sk6" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk6-1" class="ms-2 text-sm text-gray-900">- 7. Ребенок живет вместе со своими братьями и сестрами или очень близко к ним</label>
+                        <input type="radio" id="sk6-1" name="sk6" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk6-1" class="ms-2 text-sm text-gray-900">77. Ребенок живет вместе со своими братьями и сестрами или очень близко к ним</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="sk6-2" name="sk6" value="0" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -6534,8 +6534,8 @@
                         <label for="sk7-4" class="ms-2 text-sm text-gray-900">9. Нет информации</label>
                     </div>
                     <div class="flex items-center">
-                        <input type="radio" id="sk7-5" name="sk7" value="-7" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk7-5" class="ms-2 text-sm text-gray-900">- 7. У ребенка нет семьи</label>
+                        <input type="radio" id="sk7-5" name="sk7" value="77" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk7-5" class="ms-2 text-sm text-gray-900">77. У ребенка нет семьи</label>
                     </div>
                 </div>
             </div>
