--- a/src/pages/instruments/02_cibs_uz.html
+++ b/src/pages/instruments/02_cibs_uz.html
@@ -4390,7 +4390,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>LK22_12. Bola OIV/OITS bilan kasalmi?</div>
+                <div>LK22_12. Bolada OIV / OITS mavjudmi?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="lk22_12-1" type="radio" value="1" name="lk22_12" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -5073,7 +5073,7 @@
                     <option value="9">9</option>
                     <option value="10">10. Jami</option>
                     <option value="-1">-1. Bilmayman / Javob yo'q</option>
-                    <option value="-77">-7. Shart emas</option>
+                    <option value="77">77. Shart emas</option>
                 </select>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -5091,7 +5091,7 @@
                     <option value="9">9</option>
                     <option value="10">10. Jami</option>
                     <option value="-1">-1. Bilmayman / Javob yo'q</option>
-                    <option value="-77">-7. Shart emas</option>
+                    <option value="77">77. Shart emas</option>
                 </select>
             </div>
 
@@ -5355,8 +5355,8 @@
                 <div>SK2. O'tgan olti oy ichida bola ota-onasinikga bordimi yohud un iota-onasi yoki boshqa katta yoshli oila a'zosi kelib ko'rib ketdimi?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="sk2-1" type="radio" value="-77" name="sk2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk2-1" class="ms-2 text-sm text-gray-900">- 7. Bolaning oilasi yo'q</label>
+                        <input id="sk2-1" type="radio" value="77" name="sk2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk2-1" class="ms-2 text-sm text-gray-900">77. Bolaning oilasi yo'q</label>
                     </div>
                     <div class="flex items-center">
                         <input id="sk2-2" type="radio" value="2" name="sk2" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -5421,8 +5421,8 @@
                 <div>SK5. Bolaning turli xizmatlarda yashovchi aka-uka/opa-singillari bilan munosabatlari qanday qo'llab-quvvatlanib kelayotganligi yoki yaxshilayotganligi yuzasidan ma'lumot mavjudmi?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="sk5-1" type="radio" value="-77" name="sk5" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk5-1" class="ms-2 text-sm text-gray-900">-7. Bolaning boshqa xizmatlarda aka-uka/opa-singillari yo'q</label>
+                        <input id="sk5-1" type="radio" value="77" name="sk5" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk5-1" class="ms-2 text-sm text-gray-900">77. Bolaning boshqa xizmatlarda aka-uka/opa-singillari yo'q</label>
                     </div>
                     <div class="flex items-center">
                         <input id="sk5-2" type="radio" value="0" name="sk5" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -5439,8 +5439,8 @@
                 <div>SK6. O'tgan olti oy ichida bola aka-uka/opa-singillari bilan uchrashdimi?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="sk6-1" type="radio" value="-77" name="sk6" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="sk6-1" class="ms-2 text-sm text-gray-900">- 7. Bola aka-uka/opa-singillari bilan birga yoki ularga juda yaqin yashaydi</label>
+                        <input id="sk6-1" type="radio" value="77" name="sk6" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="sk6-1" class="ms-2 text-sm text-gray-900">77. Bola aka-uka/opa-singillari bilan birga yoki ularga juda yaqin yashaydi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="sk6-2" type="radio" value="0" name="sk6" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
